package PAI.factory;

import PAI.domain.Student;

import java.util.List;

public interface IStudentListFactory {

    List<Student> newArrayList();

}
